<resources>
    <string name="app_name">KMVVMv2</string>
    <string name="add_device_canbel_btn">Cancelar</string>
    <string name="add_device_save_btn">Salvar</string>
    <string name="fab_model">Modelo do Fabricante</string>
    <string name="model_name">Nome do Modelo</string>
    <string name="year_fab">Ano de Fabricação</string>
    <string name="manufacture_brand">Fabricante</string>
    <string name="lbl_device_list_fab_model">Modelo Fabricante:</string>
    <string name="lbl_device_list_model_name">Modelo</string>
    <string name="lbl_device_list_year">Ano</string>
    <string name="nop_name">...</string>
    <string name="lbl_device_list_manufacture_brand">Fabricante</string>
</resources>
