<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="8dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="@string/lbl_device_list_fab_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:textStyle="bold"/>
            <TextView
                    android:text="@string/nop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/fab_model_list_id"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="@string/lbl_device_list_model_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textStyle="bold"/>
            <TextView
                    android:text="@string/nop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/model_name_list_id"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="@string/lbl_device_list_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:textStyle="bold"/>
            <TextView
                    android:text="@string/nop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/year_fab_list_id"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/lbl_device_list_manufacture_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView10"/>
            <TextView
                    android:text="@string/nop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/manufacture_brand_list_id"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>